@@ -42,9 +42,9 @@
       "runtime" : {
          "requires" : {
             "Carp" : "0",
-            "DynaLoader" : "0",
             "Exporter" : "0",
             "IO::Handle" : "0",
+            "XSLoader" : "0",
             "perl" : "5.006",
             "strict" : "0",
             "warnings" : "0"
