@@ -77,7 +77,7 @@ strict                      = 0
 warnings                    = 0
 Carp                        = 0
 Exporter                    = 0
-DynaLoader                  = 0
+XSLoader                    = 0
 IO::Handle                  = 0
 
 [Prereqs / TestRequires]
