@@ -3,6 +3,9 @@ Revision history for {{$dist->name}}
 {{$NEXT}}
     - Fixed a missing dep
     - Fixed the date of libghttp's demise to 2002
+    - Updated XS code to handle refcounts better (thanks, dsteinwand)
+    - Use XSLoader instead of DynaLoader
+    - Added XS_VERSION for test releases
 
 1.080_001 2016-04-07
     - Made to use Dist::Zilla
